# shaktool

./: .env.example  .gitignore  Cargo.toml  README.md  bot.db.sql
src/: db.rs  main.rs
src/api/: crocomire.rs  deertier.rs  mod.rs  src.rs  twitch.rs
src/commands/: misc.rs  mod.rs  records.rs  streams.rs
src/models/: mod.rs  records.rs  streams.rs
src/services/: streams.rs
