[package]
name = "shaktool"
version = "2.0.0"
authors = ["Thomas Backmark <total@viskos.org>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8"
hyper = "0.11.9"
chrono = "0.4"
env_logger = "0.5"
kankyo = "0.1.1"
log = "0.4.1"
time = "0.1.39"
num = "0.1"
num-derive = "0.1"

[dependencies.serenity]
version = "0.4"
features = ["framework", "standard_framework"]

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]